--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -22,8 +22,8 @@
 </div>
 <script>
     (function(){
-        var trie = {{ trie|safe }};
-        $('#searchbox').autocomplete(trie);
+        var compendiums = {{ compendiums|safe }};
+        $('#searchbox').autocomplete(compendiums);
     })();
 </script>
 
