--- a/wikipendium/wiki/templates/no_article.html
+++ b/wikipendium/wiki/templates/no_article.html
@@ -3,7 +3,7 @@
 
 {% block title %}This article does not exist -{% endblock %}
 
-{% block body_class %}article fixed-header{% endblock %}
+{% block body_class %}toc-hidden article fixed-header{% endblock %}
 
 {% block content %}
 <div id=article class=serif>
