Fix toc offset on 404 page
Missed this one when fixing the other error pages

--- a/wikipendium/wiki/templates/404.html
+++ b/wikipendium/wiki/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block title %}Page not found -{% endblock %}
 
-{% block body_class %}article fixed-header{% endblock %}
+{% block body_class %}toc-hidden article fixed-header{% endblock %}
 
 {% block content %}
 <div id=article class=serif>
