--- a/wikipendium/user/templates/user/profile.html
+++ b/wikipendium/user/templates/user/profile.html
@@ -7,12 +7,12 @@
     <div class=clearfix>
         {% if user == request.user %}
         <a href="http://gravatar.com/emails" target="_blank" class="profile-photo sans-serif" style=float:left;display:inline-block;>
-            <img src="{{ gravatar }}" width=150 height=150 />
+            <img src="{{ gravatar }}" alt width=150 height=150>
             <span>Edit your<br>profile picture<br>at <span class="gravatar-link">gravatar.com</span></span>
         </a>
         {% else %}
         <div class=profile-photo>
-            <img src="{{ gravatar }}" width=150 height=150 />
+            <img src="{{ gravatar }}" alt width=150 height=150>
         </div>
         {% endif %}
         <h2 class=title>{{ user }}</h2>
