Move toc-padding to body
When the toc is visible, instead of adding padding within the content
container, it is now added to the body. This lets the content retain its
640px width, since the padding doesn't eat from the constrained
max-width of the container.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2329,15 +2329,13 @@ body.toc-hidden #toggle-toc {
         padding-left: 50px;
     }
 
-    body.article:not(.toc-hidden) #content,
-    body.article:not(.toc-hidden) #page-footer {
+    body.article:not(.toc-hidden) {
         padding-left: 315px;
     }
 }
 
 @media screen and (min-width: 1330px) {
-    body.article:not(.toc-hidden) #content,
-    body.article:not(.toc-hidden) #page-footer {
+    body.article:not(.toc-hidden) {
         padding-left: 0;
     }
 }
