--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2231,6 +2231,10 @@ body.article .last-updated {
     margin: 20px auto 10px;
 }
 
+.contributors a:not(:last-child)::after {
+    content: ",";
+}
+
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
     margin: 0 0 8px;
