--- a/wikipendium/wiki/static/codemirror/codemirror.css
+++ b/wikipendium/wiki/static/codemirror/codemirror.css
@@ -2,7 +2,7 @@
 
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
-  font-family: monospace;
+  font-family: menlo, consolas, monospace;
   height: 300px;
 }
 .CodeMirror-scroll {
@@ -109,11 +109,12 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
    the editor. You probably shouldn't touch them. */
 
 .CodeMirror {
-  line-height: 1;
+  font-size: 15px;
+  line-height: 1.3;
   position: relative;
   overflow: hidden;
   background: white;
-  color: black;
+  color: #424242;
 }
 
 .CodeMirror-scroll {
