Use ISO 8601 date format as input to momentjs
Support for other date formats is begin deprecated in momentjs as
explained in https://github.com/moment/moment/issues/1407

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -91,6 +91,9 @@
 </div>
 
 <div class=last-updated>
-    {{ articleContent.updated|date:"r" }}
+    <em>Last updated:</em>
+    <time datetime="{{ articleContent.updated|date:"c" }}">
+        {{ articleContent.updated|date:"r" }}
+    </time>.
 </div>
 {% endblock %}
