Hide add language button when creating article
Also makes sure to hide all buttons properly on mobile when they're not
relevant.

--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -11,9 +11,10 @@
 <div class=article-nav>
     <div class=hide-on-mobile>
         <a class=button href=/new/>Create article</a>
-        {% language_chooser language_list articleContent %}
 
         {% if articleContent %}
+            {% language_chooser language_list articleContent %}
+
             <div class=button-group style=inline-block>
                 <a class=button href={{ articleContent.get_absolute_url }}>Article</a>
                 <a class="button history-link" href={{ articleContent.get_history_url }}>History</a>
@@ -22,23 +23,27 @@
     </div>
 
     <div class=show-on-mobile>
-        <div class="has-dropdown button-dropdown">
-            <a href=# class=button data-toggle=dropdown>
-                Tools
-                <span class=caret></span>
-            </a>
-            <ul class="dropdown right">
-                <li><a class=edit-link href={{ articleContent.get_absolute_url }}>Article</a></li>
-                <li><a class=history-link href={{ articleContent.get_history_url }}>History</a></li>
-                <hr>
-                {% for language, language_article_content_url in language_list %}
-                    <li><a href={{ language_article_content_url }}>Edit in {{ language }}</a></li>
-                {% endfor %}
-                <li><a href={{ articleContent.get_add_language_url }}>Add language</a></li>
-                <hr>
-                <li><a href=/new/>Create new article</a></li>
-            </ul>
-        </div>
+        {% if articleContent %}
+            <div class="has-dropdown button-dropdown">
+                <a href=# class=button data-toggle=dropdown>
+                    Tools
+                    <span class=caret></span>
+                </a>
+                <ul class="dropdown right">
+                    <li><a class=edit-link href={{ articleContent.get_absolute_url }}>Article</a></li>
+                    <li><a class=history-link href={{ articleContent.get_history_url }}>History</a></li>
+                    <hr>
+                    {% for language, language_article_content_url in language_list %}
+                        <li><a href={{ language_article_content_url }}>Edit in {{ language }}</a></li>
+                    {% endfor %}
+                    <li><a href={{ articleContent.get_add_language_url }}>Add language</a></li>
+                    <hr>
+                    <li><a href=/new/>Create new article</a></li>
+                </ul>
+            </div>
+        {% else %}
+            <a class=button href=/new/>Create article</a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
