--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -117,6 +117,7 @@
             <ul class=bottom-menu style=font-variant:small-caps>
                 <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
                 <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
+                <li><a href=/stats/>Statistics</a></li>
                 <li><a href=http://github.com/stianjensen/wikipendium.no/issues>Report a bug</a></li>
                 <li>
                     <a href=/>Wikipendium</a>
