--- a/wikipendium/stats/templates/stats/index.html
+++ b/wikipendium/stats/templates/stats/index.html
@@ -2,14 +2,77 @@
 
 {% block content %}
 
-<h1>Articles</h1>
-Number of articles edited today: {{ number_of_acs_updated_in_the_last_24_hours }}
+<div class=statistics>
 
-<h1>Users</h1>
-<p>Most contributions last 24 hours: {{ users.most_contrib_24_hours.user }}
-with {{ users.most_contrib_24_hours.contributions }} contributions!</p>
-<p>Most contributions last week: {{ users.most_contrib_week.user }}
-with {{ users.most_contrib_week.contributions }} contributions!</p>
-<p>Most contributions last month: {{ users.most_contrib_month.user }}
-with {{ users.most_contrib_month.contributions }} contributions!</p>
+  <div class=row>
+    <div class=span12>
+      <div class=statistics-box>
+        <div class=statistic>
+          Statistics
+          <small>Updated once per day.</small>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class=row>
+    <div class=span4>
+      <div class=statistics-box>
+        <h2>Compendiums edited today</h2>
+        <div class=statistic>
+          {{ number_of_acs_updated_in_the_last_24_hours }}
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class=row>
+    <div class=span4>
+      <div class=statistics-box>
+        <h2>Most contributions last 24 hours</h2>
+        <div class=statistic>
+          <a href="/users/{{ users.most_contrib_24_hours.user }}/">
+            {{ users.most_contrib_24_hours.user }}
+          </a>
+          <small>
+            {{ users.most_contrib_24_hours.contributions }}
+            contribution{{ users.most_contrib_24_hours.contributions|pluralize }}
+          </small>
+        </div>
+      </div>
+    </div>
+
+    <div class=span4>
+      <div class=statistics-box>
+        <h2>Most contributions last week</h2>
+        <div class=statistic>
+          <a href="/users/{{ users.most_contrib_week.user }}/">
+            {{ users.most_contrib_week.user }}
+          </a>
+          <small>
+            {{ users.most_contrib_week.contributions }}
+            contribution{{ users.most_contrib_week.contributions|pluralize }}
+          </small>
+        </div>
+      </div>
+    </div>
+
+    <div class=span4>
+      <div class=statistics-box>
+        <h2>Most contributions last month</h2>
+        <div class=statistic>
+          <a href="/users/{{ users.most_contrib_month.user }}/">
+            {{ users.most_contrib_month.user }}
+          </a>
+          <small>
+            {{ users.most_contrib_month.contributions }}
+            contribution{{ users.most_contrib_month.contributions|pluralize }}
+          </small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
 {% endblock %}
