--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -16,6 +16,7 @@
 
     {% compress css %}
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
+    <link rel=stylesheet href={{STATIC_URL}}octicons/octicons.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/dialog.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/wikipendium.css />
