Add margin notes to articles
Margin notes are a type of footnote or commentary that appear inline or
in the margins of the text close to where they are defined, rather than
at the bottom as regular footnotes do. Margin notes are declared in
Markdown using the just-invented syntax:

[#] This is a margin note.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2472,6 +2472,35 @@ pre code {
     padding: 0 10px 0 0;
 }
 
+#article .margin-note {
+  position: relative;
+  float: right;
+  border-left: 3px solid #089;
+  background: #fafafa;
+  width: 350px;
+  margin-right: -365px;
+  font-size: 12px;
+  line-height: 16px;
+  padding: 10px;
+}
+
+@media all and (max-width: 1399px) {
+  #article .margin-note {
+    width: 250px;
+    margin-right: -265px;
+  }
+}
+
+@media all and (max-width: 1329px) {
+  #article .margin-note {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+}
+
+
+
 /******************
  * NO ARTICLE
 ******************/
