--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -8,6 +8,9 @@
         <a href=#links-and-images-tab>Links & Images</a>
     </li>
     <li>
+        <a href=#margin-notes-tab>Margin Notes</a>
+    </li>
+    <li>
         <a href=#code-tab>Code</a>
     </li>
     <li>
@@ -115,6 +118,12 @@ Car
             <a href="http://en.wikibooks.org/wiki/LaTeX/Mathematics" target=_blank>
                 See a full LaTeX/Math documentation here</a>.
         </p>
+    </div>
+
+    <div class=tab id="margin-notes-tab">
+        <h4>Margin Notes</h4>
+        <pre>[#] This is a margin note that can provide additional
+information or commentary to the main text of a compendium.</pre>
     </div>
 
     <div class=tab id="code-tab">
