--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -118,6 +118,7 @@
                 <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
                 <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
                 <li><a href=/stats/>Statistics</a></li>
+                <li class=break></li>
                 <li><a href=http://github.com/stianjensen/wikipendium.no/issues>Report a bug</a></li>
                 <li>
                     <a href=/>Wikipendium</a>
