Add more compendium edited statistics
This adds compendiums edited last week and compendiums edited last month
to match the most contributions statistics.

--- a/wikipendium/stats/templates/stats/index.html
+++ b/wikipendium/stats/templates/stats/index.html
@@ -17,9 +17,25 @@
   <div class=row>
     <div class=span4>
       <div class=statistics-box>
-        <h2>Compendiums edited today</h2>
+        <h2>Compendiums edited last 24 hours</h2>
         <div class=statistic>
           {{ number_of_acs_updated_in_the_last_24_hours }}
+        </div>
+      </div>
+    </div>
+    <div class=span4>
+      <div class=statistics-box>
+        <h2>Compendiums edited last week</h2>
+        <div class=statistic>
+          {{ number_of_acs_updated_in_the_last_week }}
+        </div>
+      </div>
+    </div>
+    <div class=span4>
+      <div class=statistics-box>
+        <h2>Compendiums edited last month</h2>
+        <div class=statistic>
+          {{ number_of_acs_updated_in_the_last_month }}
         </div>
       </div>
     </div>
