Separate out base css framework

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -15,6 +15,7 @@
     {% load compress %}
 
     {% compress css %}
+    <link rel=stylesheet href={{STATIC_URL}}css/helium.css>
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
     <link rel=stylesheet href={{STATIC_URL}}octicons/octicons.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
