Convert master.css to scss
This was done programatically using http://css2sass.herokuapp.com/
Version 3.4.14 (Selective Steve). Additionally, two unicode characters
were replaced by their escaped representations since the sass compiler
does not understand complex unicode.

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -16,7 +16,7 @@
 
     {% compress css %}
     <link rel=stylesheet href={{STATIC_URL}}css/helium.css>
-    <link rel=stylesheet href={{STATIC_URL}}css/master.css />
+    <link rel=stylesheet href={{STATIC_URL}}scss/master.scss type=text/x-scss />
     <link rel=stylesheet href={{STATIC_URL}}octicons/octicons.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/dialog.css />
