Add automatic .scss static file loader
Now, all findable .scss static files will be automatically added to
base.html. This means that .scss files do not need to be manually linked
using HTML <link> tags.

The templatetag for this was put in the wiki app for now, even though it
does not directly pertain to it.

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -13,10 +13,10 @@
     <title>{% block title %}{% endblock %} Wikipendium</title>
 
     {% load compress %}
-
     {% compress css %}
     <link rel=stylesheet href={{STATIC_URL}}css/helium.css>
-    <link rel=stylesheet href={{STATIC_URL}}scss/master.scss type=text/x-scss />
+    {% load all_scss_files %}
+    {% all_scss_files %}
     <link rel=stylesheet href={{STATIC_URL}}octicons/octicons.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/dialog.css />
