--- a/wikipendium/wiki/templates/history.html
+++ b/wikipendium/wiki/templates/history.html
@@ -7,7 +7,7 @@ History: {{ article.slug }} –
 {% block body_class %}fixed-header{% endblock %}
 
 {% block nav %}
-<a class=button href="{{ back_url }}">Article</a>
+<a class=button href="{{ back_url }}">Compendium</a>
 {% endblock %}
 
 {% block content %}
