--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -7,7 +7,7 @@
 {% block body_class %}frontpage{% endblock %}
 
 {% block nav %}
-<a class=button href=/new/>Create article</a>
+<a class=button href=/new/>Create compendium</a>
 {% endblock %}
 
 {% block content %}
