--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -91,7 +91,7 @@ Car
         <pre><code>[This is a link](http://tothispage.com/)</code></pre>
         <p>If you want to show the link URL, you can simply type:</p>
         <pre><code>&lt;http://theurl.com/&gt;</code></pre>
-        <p>To link to other sections in the article, use this format:</p>
+        <p>To link to other sections in the compendium, use this format:</p>
         <pre><code>[Section Name](#section-name)</code></pre>
         <h4>Images</h4>
         <pre><code>![Alt text](http://url.to/image.png)</code></pre>
