Add codemirror image uploading from clipboard
Fixes #142

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -39,7 +39,8 @@
     <script src={{STATIC_URL}}codemirror/search.js></script>
     <script src={{STATIC_URL}}codemirror/searchcursor.js></script>
     <script src={{STATIC_URL}}codemirror/dialog.js></script>
-
+    <script src={{STATIC_URL}}codemirror/inline-attachment.js></script>
+    <script src={{STATIC_URL}}codemirror/codemirror.inline-attachment.js></script>
     <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
     <script src="{{STATIC_URL}}chosen/chosen.jquery.min.js"></script>
     <script src="{{STATIC_URL}}js/jquery.ba-throttle-debounce.min.js"></script>
