Add explanation to writing guide

--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -95,6 +95,7 @@ Car
         <pre><code>[Section Name](#section-name)</code></pre>
         <h4>Images</h4>
         <pre><code>![Alt text](http://url.to/image.png)</code></pre>
+        <p>You can upload &amp; include images by dragging them directly into the editor.</p>
     </div>
 
     <div class=tab id="tables-tab">
