--- a/wikipendium/wiki/static/scss/article.scss
+++ b/wikipendium/wiki/static/scss/article.scss
@@ -117,7 +117,7 @@ body.toc-hidden #toggle-toc {
   padding: 34px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 601px) {
   body {
     &.fixed-header .header-wrapper .container {
       padding-left: 50px;
@@ -128,13 +128,27 @@ body.toc-hidden #toggle-toc {
   }
 }
 
+@media screen and (min-width: 601px) and (max-width: 768px) {
+  body.toc-hidden {
+    #article {
+      padding-top: 60px;
+
+      .title {
+        position: absolute;
+        left: 57px;
+        margin-top: -60px;
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 1330px) {
   body.article:not(.toc-hidden) {
     padding-left: 0;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 600px) {
   .toc, #toggle-toc {
     display: none;
   }
