Add link to rendered article revisions
The link is added to the diff view page for a single article revision.

--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -17,6 +17,7 @@ Diff: {{ ac.article.slug }} –
 
 <div class=info>
     This is an old version of the compendium, written {{ac.updated}} Changes made in this revision were made by <a href="{{ ac.edited_by.get_absolute_url }}">{{ ac.edited_by }}</a>.
+    <a href="{{ ac.get_history_single_url }}rendered/">View rendered version</a>.
 </div>
 
 <div style=overflow:hidden>
