--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -28,7 +28,12 @@
 
 {% block nav %}
 <div class=article-nav>
-    <div class=hide-on-mobile>
+    <div class=hide-on-mobile-tablet>
+
+        <a class=button href="{{ twitter_share_intent_href }}" target=_blank>
+            Share on Twitter
+        </a>
+
         <a class=button href=/new/>Create compendium</a>
         {% language_chooser language_list articleContent %}
         <div class=button-group style=inline-block>
@@ -41,7 +46,7 @@
         </div>
     </div>
 
-    <div class=show-on-mobile>
+    <div class=show-on-mobile-tablet>
         <div class="has-dropdown button-dropdown">
             <a href=# class=button data-toggle=dropdown>
                 Tools
@@ -50,6 +55,9 @@
             <ul class="dropdown right">
                 <li><a class=edit-link href={{ articleContent.get_edit_url }}>Edit</a></li>
                 <li><a class=history-link href={{ articleContent.get_history_url }}>History</a></li>
+                <li><a href="{{ twitter_share_intent_href }}" target=_blank>
+                    Share on Twitter
+                </a></li>
                 <hr>
                 {% for language, language_article_content_url in language_list %}
                     <li><a href={{ language_article_content_url }}>Read in {{ language }}</a></li>
