Allow special characters in tag names
Instead of requiring the name and slug to be identical, we always keep
the inputted name of the tag, and use the slug only for urls and lookup.

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -73,7 +73,7 @@
         </div>
         <ul>
             {% for tag in articleContent.article.tags.all %}
-                <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
+                <li><a href="/tag/{{ tag.slug }}">{{ tag }}</a></li>
             {% endfor %}
         </ul>
         <form><input /></form>
