--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -54,6 +54,8 @@
     <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-114x114.png" sizes="114x114" />
     <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.png" />
 
+    <link href="{{STATIC_URL}}opensearch/opensearch.xml" rel="search" type="application/opensearchdescription+xml" title="wikipendium.no" />
+
     {% if mathjax %}
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
