Remove italic from editor code blocks
This fixes #425.

--- a/wikipendium/static/codemirror/wikipendium.css
+++ b/wikipendium/static/codemirror/wikipendium.css
@@ -7,7 +7,7 @@
 .cm-s-wikipendium span.cm-variable-3 {}
 .cm-s-wikipendium span.cm-property {}
 .cm-s-wikipendium span.cm-operator {}
-.cm-s-wikipendium span.cm-comment {color: #0080FF; font-style: italic;}
+.cm-s-wikipendium span.cm-comment {color: #0080FF;}
 .cm-s-wikipendium span.cm-string {color: red;}
 .cm-s-wikipendium span.cm-meta {color: yellow;}
 .cm-s-wikipendium span.cm-error {color: #f00;}
