Access gravatar via HTTPS to avoid mixed content warning

--- a/wikipendium/user/templates/user/profile.html
+++ b/wikipendium/user/templates/user/profile.html
@@ -6,7 +6,7 @@
 <div id=article class=serif>
     <div class=clearfix>
         {% if user == request.user %}
-        <a href="http://gravatar.com/emails" target="_blank" class="profile-photo sans-serif" style=float:left;display:inline-block;>
+        <a href="https://gravatar.com/emails" target="_blank" class="profile-photo sans-serif" style=float:left;display:inline-block;>
             <img src="{{ gravatar }}" alt width=150 height=150>
             <span>Edit your<br>profile picture<br>at <span class="gravatar-link">gravatar.com</span></span>
         </a>
