Add old-version-specific styling to articles
Since the article template is now re-used for rendering old article
versions, some extra togglable rendering and behavioral options have
been added. This results in a rendered history view that properly
communicates that it displays an old version of the article rather than
the current version of the article.

--- a/wikipendium/wiki/static/scss/article.scss
+++ b/wikipendium/wiki/static/scss/article.scss
@@ -2,6 +2,12 @@
   display: inline-block;
 }
 
+.info.old-version {
+  @media (min-width: 1330px) {
+    margin-left: 150px;
+  }
+}
+
 #article {
   width: auto;
   max-width: 640px;
