Add counter support
See
https://github.com/mathjax/MathJax-third-party-extensions/tree/master/counters
for more information. `\value{name}`, although supposedly supported by
the extension, does not seem to work. Perhaps this is because the
extension is two years old. Hopefully, `\value{..}` is not particularly
useful.

This fixes #445.

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -58,10 +58,12 @@
 
     {% if mathjax %}
     <script type="text/x-mathjax-config">
+    MathJax.Ajax.config.path["Contrib"] = "//cdn.mathjax.org/mathjax/contrib";
     MathJax.Hub.Config({
       TeX: {
         extensions: ['AMSmath.js', 'AMSsymbols.js']
       },
+      extensions: ['[Contrib]/counters/counters.js'],
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
         displayMath: [['$$','$$'], ['\\[','\\]']],
