--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -120,13 +120,13 @@
         <div class="container">
             <ul class=bottom-menu style=font-variant:small-caps>
                 <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
-                <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
+                <li><a href=https://twitter.com/wikipendium/>Twitter</a></li>
                 <li><a href=/stats/>Statistics</a></li>
                 <li class=break></li>
-                <li><a href=http://github.com/wikipendium/wikipendium.no/issues>Report a bug</a></li>
+                <li><a href=https://github.com/wikipendium/wikipendium.no/issues>Report a bug</a></li>
                 <li>
                     <a href=/>Wikipendium</a>
-                    <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
+                    <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
                 </li>
             </ul>
 
