--- a/wikipendium/wiki/static/scss/article.scss
+++ b/wikipendium/wiki/static/scss/article.scss
@@ -14,6 +14,13 @@
   margin: 0 auto;
   text-align: left;
 
+  img {
+    display: block;
+    max-height: 320px;
+    margin: 32px auto;
+    border-radius: 8px;
+  }
+
   section {
     padding-top: 70px;
     margin-top: -50px;
