--- a/wikipendium/static/css/helium.css
+++ b/wikipendium/static/css/helium.css
@@ -2056,3 +2056,32 @@ button.close {
   border: 0;
   -webkit-appearance: none;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #121212;
+    color: #a4a4a4;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    color: #a4a4a4;
+  }
+  .button {
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1px, #000), color-stop(1px, #0b0b0b), color-stop(2px, #0b0b0b), color-stop(2px, #000), color-stop(100%, #0b0b0b)) !important;
+    background-image: -webkit-linear-gradient(top, #000 1px, #0b0b0b 1px, #0b0b0b 2px, #000 2px, #0b0b0b 100%) !important;
+    background-image: -moz-linear-gradient(top, #000 1px, #0b0b0b 1px, #000 2px, #000 2px, #0b0b0b 100%) !important;
+    background-image: -o-linear-gradient(top, #000 1px, #0b0b0b 1px, #0b0b0b 2px, #000 2px, #0b0b0b 100%) !important;
+    background-image: linear-gradient(top, #000 1px, #0b0b0b 1px, #0b0b0b 2px, #0000 2px, #0b0b0b 100%) !important;
+    -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08) !important;
+    -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08) !important;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08) !important;
+    text-shadow: 0px 1px 0px black !important;
+    color: #a4a4a4 !important;
+  }
+  .field-group .field-label {
+    color: #a4a4a4;
+  }
+  input {
+    background-color: #444;
+    color: #1a1a1a;
+  }
+}
