--- a/wikipendium/static/scss/master.scss
+++ b/wikipendium/static/scss/master.scss
@@ -131,3 +131,11 @@ body {
     padding-top: 50px;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  body.frontpage {
+    &:before {
+      color: #444;
+    }
+  }
+}
